<resources>
    <string name="app_name">RecipeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Items-->
    <string name="navHome">Home</string>
    <string name="navSettings">Settings</string>
    <string name="navCreate">Create Your Own</string>
    <string name="navYourRecipes">Your Recipes</string>
    <string name="navFav">Favorites</string>
    <string name="navCalculator">Calorie Calculator</string>

    <!-- Home Screen -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchHint">Type Recipe Name</string>
    <string name="searchRecipeButton">Search</string>

    <!-- Create Your Own Screen -->
    <string name="finish">Finish</string>
    <string name="nameHint">Recipe Name</string>
    <string name="cookTime">Cook Time</string>
    <string name="ingredient">Ingredient</string>
    <string name="qty">Qty.</string>

    <!-- Calorie Calculator Screen -->
    <string name="ageHint">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="weightHint">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="kilos">Kilos</string>
    <string name="heightHint">Height</string>
    <string name="feet">Feet/Inches</string>
    <string name="cms">Cms</string>
    <string name="exercise">Exercise Level</string>
    <string name="results">Results:</string>
    <string name="calculate">Calculate</string>
    <string name="maintain">Maintain:</string>
    <string name="loss">Fat Loss:</string>
    <string name="extremeloss">Extreme Fat Loss:</string>
    <string name="reset">Reset</string>

    <!-- Calorie Calculator Screen -->
    <string name="sortbykey">sortByKey</string>
    <string name="defaultV">Default</string>
    <string name="ratings">Ratings</string>
    <string name="trendiness">Trendiness</string>

    <!-- Calorie Calculator Screen -->
    <string name="imageTransition">imageTransition</string>

    <!-- Settings Screen -->
    <string name="legal_title">Legal</string>
    <string name="credits">Credits</string>
    <string name="license">License</string>
    <string name="contact_title">Contact</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="technicalsupport">Technical Support</string>
    <string name="comevisitus">Come Visit Us</string>
    <string name="feedbackSummary">Report technical issues or suggest new features</string>
    <string name="supportSummary">Call us anytime to get technical support</string>
    <string name="visitusSummary">Come see us in person</string>

    <string name="licenseDescription">
        Copyright 2019 Utsav Dave \n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n
        \n
        http://www.apache.org/licenses/LICENSE-2.0\n
        \n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.

    </string>

    <!-- Credits Screen -->
    <string name="librariesTitle">Libraries</string>
    <string name="imagesTitle">Images</string>
    <string name="volleyTitle">For Database Loading</string>
    <string name="volleyDescription">com.android.volley:volley:1.1.1</string>
    <string name="imagePickerTitle">For Image Picking</string>
    <string name="imagePickerDescription">com.myhexaville:smart-image-picker:1.0.4</string>
    <string name="stepTitle">For Step By Step Layout</string>
    <string name="stepDescription">com.stepstone.stepper:material-stepper:4.3.1</string>
    <string name="step2Title">For Stepper</string>
    <string name="step2Description">moe.feng:MaterialStepperView:0.2.4.2</string>
    <string name="picassoTitle">For Image Loading</string>
    <string name="picassonDescription">com.squareup.picasso:picasso:2.71828</string>
    <string name="skeletonTitle">For Skeleton Animation</string>
    <string name="skeletonDescription">io.supercharge:shimmerlayout:2.1.0</string>
    <string name="skeletonDescription2">com.ethanhua:skeleton:1.1.2</string>

    <string name="homeIconString">Home Icon: https://www.flaticon.com/authors/freepik</string>
    <string name="createIconString">Create Your Own Icon: https://www.flaticon.com/authors/freepik</string>
    <string name="settingsIconString">Settings Icon: https://www.flaticon.com/authors/smashicons</string>
    <string name="yourRecipeIconString">Your Recipes Icon: https://www.flaticon.com/authors/freepik</string>
    <string name="calculatorIconString">Calorie Calculator Icon: https://www.flaticon.com/authors/freepik</string>


</resources>
