<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navHome" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create_your_own"
            android:title="@string/navCreate" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/navCalculator" />
        <item
            android:id="@+id/nav_your_recipes"
            android:icon="@drawable/ic_recipe"
            android:title="@string/navYourRecipes" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/navFav" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navSettings" />
    </group>

</menu>
